adding gh-pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <base href='/'>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contentful Gallery App</title>
+    <title>Vintage Local SUV's</title>
   </head>
   <body>
     <main></main>
