--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <main></main>
   </body>
-  <script src="./main.bundle.js" charset="utf-8"></script>
+  <script src="./dist/main.bundle.js" charset="utf-8"></script>
   <!--ANALYTICS-->
 </html>
